--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         Đầu tiên, cảm ơn cậu rất nhiều vì đã đọc lá thư này.
       </div>
       <div class="message">
-        Tớ có một điều muốn nói, nhưng không biết bắt đầu từ đâu.
+        Tớ có một điều muốn nói, nhưng hông bít bắt đầu từ đâu.
       </div>
       <div class="message">Cậu đồng ý...</div>
 
@@ -274,7 +274,7 @@
       </div>
       <div class="div-buttons">
         <button id="btnYes" style="display: none">Đồng ý</button>
-        <button id="btnNo" style="display: none">Không</button>
+        <button id="btnNo" style="display: none">Hông</button>
       </div>
 
       <div id="messageBox" class="message-text hide">
@@ -367,8 +367,8 @@
 
       const messagesForNo = [
         "Cậu vừa bảo gì cơ",
-        "Cậu bảo không",
-        "Không thể không yêu nhau sao",
+        "Cậu bảo hông",
+        "Hông thể hông yêu nhau sao",
         "Cảm ơn cậu đã nhận lời yêu tớ.",
         "Xíu tớ qua đón đi chơi",
       ];
